# brawlcord-framework

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  gameplay.rs  lib.rs  macros.rs  model.rs  prelude.rs  resource.rs  utils.rs
src/gameplay/: battle_brawler.rs  battle_game_mode.rs  battle_log.rs  player.rs
src/gameplay/battle_brawler/: defaults.rs
src/gameplay/battle_brawler/defaults/: nita.rs  shelly.rs
src/gameplay/battle_game_mode/: gemgrab.rs  showdown.rs
src/model/: brawler.rs  game_mode.rs  trophy_road.rs
src/resource/: bs_box.rs  power_points.rs
src/utils/: rng.rs  tiers.rs
