[package]
name = "brawlcord-framework"
version = "0.1.0"
authors = ["Sujal Bolia <sujalbolia@gmail.com>"]
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
serde_json = "1.0.129"
async-trait = "0.1.83"
# dyn-clonable = "0.9.0"
num-integer = "0.1.46"
indexmap = "2.6.0"
num-traits = "0.2.19"

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.rand]
version = "0.8.5"
features = ["alloc"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
